# ai_engineering_bootcamp

./: .env.example  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.items_mcp  Dockerfile.reviews_mcp  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  dy  pyproject.toml
.github/workflows/: ci.yaml
evals/: eval_coordinator_agent.py  eval_retriever.py
evals/datasets/: coordinator_gent.py
notebooks/: 01-llm-apis.ipynb  02-RAG-preprocessing.ipynb  04-RAG_hybrid_search.ipynb  05-LangGrapg-intro.ipynb  06-LangGraph-single-turn-assistant.ipynb  07-LangGraph-multi-turn-assistant.ipynb  08-mutiple-tools.ipynb  09-human_feedback.ipynb  10-mcp.ipynb  11-router.ipynb  12-ShoppingCart_tools.ipynb  13-ShoppingCart-Agent.ipynb  14-Coordinator-Agent copy.ipynb  15-Coordinator-evaluation.ipynb  16-litellm-router.ipynb  17-CI-Quality-Gate.ipynb  RAG-evaluation-dataset.ipynb  RAG-preprocessing.ipynb  RAG_hybrid_search.ipynb  eda_notebook.ipynb  llm-apis.ipynb  notebook.ipynb
postgres_data/pgdata/: postmaster.pid
postgres_data/pgdata/base/16384/: 1247  1247_fsm  1249  1259  1259_fsm  13462  24576  24579  24581  24581_fsm  24587  24588  24590  24590_fsm  24594  24594_fsm  24595  24596  24598  24598_fsm  24602  24602_fsm  24603  24604  24606  24607  24608  2579  2604  2606  2606_fsm  2608  2610  2610_fsm  2619  2619_fsm  2656  2657  2658  2659  (+18 more)
postgres_data/pgdata/base/4/: 2619
postgres_data/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
project_canvas/: project_info.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/Amazon-items-collection-00/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/Amazon-items-collection-02/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/Amazon-items-collection/0/: newest_clocks.json  replica_state.json
qdrant_storge/: raft_state.json
sql/: shopping_cart_table.sql
src/api/: main.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/processors/: submit_feedback.py
src/api/rag/: agent.py  agents.py  graph.py  retrieval.py  tools.py
src/api/rag/utils/: utils.py
src/chatbot-ui/: retrieval.py  streamlit_app.py
src/chatbot-ui/core/: config.py
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/core/: config.py
src/items_mcp_server/: main.py  utils.py
src/items_mcp_server/core/: config.py
src/reviews_mcp_server/: main.py  utils.py
src/reviews_mcp_server/core/: config.py
(+129 files in other folders)
