[tool.poetry]
name = "ai-engineering-bootcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "chatbot_ui", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
openai = "^1.91.0"
python-dotenv = "^1.1.1"
google-genai = "^1.22.0"
groq = "^0.29.0"
pydantic = "^2.11.7"
streamlit = "^1.46.0"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
qdrant-client = "^1.14.3"
langsmith = "^0.4.4"
langchain-openai = "^0.3.27"
ragas = "^0.2.15"
rapidfuzz = "^3.13.0"
pydantic-settings = "^2.1.0"
instructor = "^1.9.2"
fastapi = ">=0.115.5,<0.117.0"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
langgraph = "^0.5.3"
langgraph-prebuilt = "^0.5.2"
langgraph-checkpoint-postgres = "^2.0.22"
psycopg2-binary = "^2.9.10"
psycopg = {extras = ["binary"], version = "^3.2.9"}
fastmcp = "^2.11.3"
mcp = {extras = ["cli"], version = "^1.12.4"}
litellm = { path = "./litellm", develop = true, extras = ["proxy"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
